#13 Post Domain 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,4 +21,4 @@ spring:
       file-size-threshold: 2KB      # 파일을 디스크에 저장하기 전에 메모리에 보관할 최소 크기 설정
 
 file:
-  upload-dir: C:/chulgunhazaTest
+  upload-dir: ${UPLOAD_DIR}
