--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+
+server:
+  servlet:
+    session:
+      cookie:
+        name: CHULGUNHAZA_COOKIE
+
 spring:
   datasource:
     url: ${DATABASE_URL}
@@ -11,6 +18,15 @@ spring:
     properties:
       hibernate:
         format_sql: true # SQL 포맷팅 (optional)
+  data:
+    redis:
+      host: ${SPRING_REDIS_HOST}
+      password: ${SPRING_REDIS_PASS}
+      port: 6379
+
+  session:
+    store-type: redis
+
 
   # 파일 업로드 설정
   servlet:
