인증 인가 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,10 @@ server:
   servlet:
     session:
       cookie:
-        name: CHULGUNHAZA_COOKIE
+        name: JSESSIONID
+        max-age: 14400 # 4시간
+        http-only: true
+        # https 설정 추가 예정
 
 spring:
   datasource:
