--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ dependencies {
     implementation 'org.springframework.session:spring-session-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    // rabbitMQ
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+    // serialize
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+
     // gson
     implementation 'com.google.code.gson:gson:2.10.1'
 
