--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,12 @@ spring:
   session:
     store-type: redis
 
-
+  rabbitmq:
+    host: ${SPRING_RABBITMQ_HOST}
+    port: 5672
+    username: ${RMQ_USERNAME}
+    password: ${RMQ_PASSWORD}
+    virtual-host: /
   # 파일 업로드 설정
   servlet:
     multipart:
